# MeshViewer

./: CMakeLists.txt
include/: shaders.h
shaders/: shader.vs
src/: main.cpp
